5/Dragon/y.output
Terminals unused in grammar

   EQ
   NE
   LT
   LE
   GT
   GE
   PLUS
   MINUS
   OR
   STAR
   SLASH
   AND
   COMMA
   SEMICOLON
   ARRAY_ACCESS
   FUNCTION_CALL
   PROCEDURE_CALL


State 87 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    3 identifier_list: ID
    4                | identifier_list ',' ID

    5 declarations: declarations VAR identifier_list ':' type ';'
    6             | %empty

    7 type: standard_type
    8     | ARRAY '[' INUM DOTDOT INUM ']' OF standard_type

    9 standard_type: INTEGER
   10              | REAL

   11 subprogram_declarations: subprogram_declarations subprogram_declaration ';'
   12                        | %empty

   13 subprogram_declaration: subprogram_head declarations subprogram_declarations compound_statement

   14 $@2: %empty

   15 subprogram_head: FUNCTION ID $@2 arguments ':' standard_type ';'

   16 $@3: %empty

   17 subprogram_head: PROCEDURE ID $@3 arguments ';'

   18 arguments: '(' parameter_list ')'
   19          | %empty

   20 parameter_list: identifier_list ':' type
   21               | parameter_list ';' identifier_list ':' type

   22 compound_statement: BBEGIN optional_statements END

   23 optional_statements: statement_list
   24                    | %empty

   25 statement_list: statement
   26               | statement ';' optional_statements

   27 statement: variable ASSIGNOP expression
   28          | procedure_statement
   29          | compound_statement
   30          | IF expression THEN statement ELSE statement
   31          | IF expression THEN statement
   32          | WHILE expression DO statement

   33 variable: ID
   34         | ID '[' expression ']'

   35 procedure_statement: ID
   36                    | ID '(' expression_list ')'

   37 expression_list: expression
   38                | expression_list ',' expression

   39 expression: simple_expression
   40           | simple_expression RELOP simple_expression

   41 simple_expression: term
   42                  | ADDOP term
   43                  | simple_expression ADDOP term

   44 term: factor
   45     | term MULOP factor

   46 factor: ID
   47       | ID '[' expression ']'
   48       | ID '(' expression_list ')'
   49       | INUM
   50       | RNUM
   51       | '(' expression ')'
   52       | NOT factor


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 18 36 48 51
')' (41) 2 18 36 48 51
',' (44) 4 38
'.' (46) 2
':' (58) 5 15 20 21
';' (59) 2 5 11 15 17 21 26
'[' (91) 8 34 47
']' (93) 8 34 47
error (256)
PROGRAM (258) 2
BBEGIN (259) 22
END (260) 22
VAR (261) 5
PROCEDURE (262) 17
FUNCTION (263) 15
INTEGER (264) 9
REAL (265) 10
ARRAY (266) 8
OF (267) 8
DOTDOT (268) 8
IF (269) 30 31
THEN (270) 30 31
ELSE (271) 30
WHILE (272) 32
DO (273) 32
ASSIGNOP (274) 27
RELOP (275) 40
EQ (276)
NE (277)
LT (278)
LE (279)
GT (280)
GE (281)
ADDOP (282) 42 43
PLUS (283)
MINUS (284)
OR (285)
MULOP (286) 45
STAR (287)
SLASH (288)
AND (289)
NOT (290) 52
ID (291) 2 3 4 15 17 33 34 35 36 46 47 48
INUM (292) 8 49
RNUM (293) 50
COMMA (294)
SEMICOLON (295)
ARRAY_ACCESS (296)
FUNCTION_CALL (297)
PROCEDURE_CALL (298)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 2, on right: 0
$@1 (54)
    on left: 1, on right: 2
identifier_list (55)
    on left: 3 4, on right: 2 4 5 20 21
declarations (56)
    on left: 5 6, on right: 2 5 13
type (57)
    on left: 7 8, on right: 5 20 21
standard_type (58)
    on left: 9 10, on right: 7 8 15
subprogram_declarations (59)
    on left: 11 12, on right: 2 11 13
subprogram_declaration (60)
    on left: 13, on right: 11
subprogram_head (61)
    on left: 15 17, on right: 13
$@2 (62)
    on left: 14, on right: 15
$@3 (63)
    on left: 16, on right: 17
arguments (64)
    on left: 18 19, on right: 15 17
parameter_list (65)
    on left: 20 21, on right: 18 21
compound_statement (66)
    on left: 22, on right: 2 13 29
optional_statements (67)
    on left: 23 24, on right: 22 26
statement_list (68)
    on left: 25 26, on right: 23
statement (69)
    on left: 27 28 29 30 31 32, on right: 25 26 30 31 32
variable (70)
    on left: 33 34, on right: 27
procedure_statement (71)
    on left: 35 36, on right: 28
expression_list (72)
    on left: 37 38, on right: 36 38 48
expression (73)
    on left: 39 40, on right: 27 30 31 32 34 37 38 47 51
simple_expression (74)
    on left: 41 42 43, on right: 39 40 43
term (75)
    on left: 44 45, on right: 41 42 43 45
factor (76)
    on left: 46 47 48 49 50 51 52, on right: 44 45 52


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 program: $@1 PROGRAM . ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    ID  shift, and go to state 5


State 5

    2 program: $@1 PROGRAM ID . '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    '('  shift, and go to state 6


State 6

    2 program: $@1 PROGRAM ID '(' . identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

    ID  shift, and go to state 7

    identifier_list  go to state 8


State 7

    3 identifier_list: ID .

    $default  reduce using rule 3 (identifier_list)


State 8

    2 program: $@1 PROGRAM ID '(' identifier_list . ')' ';' declarations subprogram_declarations compound_statement '.'
    4 identifier_list: identifier_list . ',' ID

    ')'  shift, and go to state 9
    ','  shift, and go to state 10


State 9

    2 program: $@1 PROGRAM ID '(' identifier_list ')' . ';' declarations subprogram_declarations compound_statement '.'

    ';'  shift, and go to state 11


State 10

    4 identifier_list: identifier_list ',' . ID

    ID  shift, and go to state 12


State 11

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' . declarations subprogram_declarations compound_statement '.'

    $default  reduce using rule 6 (declarations)

    declarations  go to state 13


State 12

    4 identifier_list: identifier_list ',' ID .

    $default  reduce using rule 4 (identifier_list)


State 13

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' declarations . subprogram_declarations compound_statement '.'
    5 declarations: declarations . VAR identifier_list ':' type ';'

    VAR  shift, and go to state 14

    $default  reduce using rule 12 (subprogram_declarations)

    subprogram_declarations  go to state 15


State 14

    5 declarations: declarations VAR . identifier_list ':' type ';'

    ID  shift, and go to state 7

    identifier_list  go to state 16


State 15

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations . compound_statement '.'
   11 subprogram_declarations: subprogram_declarations . subprogram_declaration ';'

    BBEGIN     shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19

    subprogram_declaration  go to state 20
    subprogram_head         go to state 21
    compound_statement      go to state 22


State 16

    4 identifier_list: identifier_list . ',' ID
    5 declarations: declarations VAR identifier_list . ':' type ';'

    ','  shift, and go to state 10
    ':'  shift, and go to state 23


State 17

   22 compound_statement: BBEGIN . optional_statements END

    BBEGIN  shift, and go to state 17
    IF      shift, and go to state 24
    WHILE   shift, and go to state 25
    ID      shift, and go to state 26

    $default  reduce using rule 24 (optional_statements)

    compound_statement   go to state 27
    optional_statements  go to state 28
    statement_list       go to state 29
    statement            go to state 30
    variable             go to state 31
    procedure_statement  go to state 32


State 18

   17 subprogram_head: PROCEDURE . ID $@3 arguments ';'

    ID  shift, and go to state 33


State 19

   15 subprogram_head: FUNCTION . ID $@2 arguments ':' standard_type ';'

    ID  shift, and go to state 34


State 20

   11 subprogram_declarations: subprogram_declarations subprogram_declaration . ';'

    ';'  shift, and go to state 35


State 21

   13 subprogram_declaration: subprogram_head . declarations subprogram_declarations compound_statement

    $default  reduce using rule 6 (declarations)

    declarations  go to state 36


State 22

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement . '.'

    '.'  shift, and go to state 37


State 23

    5 declarations: declarations VAR identifier_list ':' . type ';'

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39
    ARRAY    shift, and go to state 40

    type           go to state 41
    standard_type  go to state 42


State 24

   30 statement: IF . expression THEN statement ELSE statement
   31          | IF . expression THEN statement

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 49
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 25

   32 statement: WHILE . expression DO statement

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 53
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 26

   33 variable: ID .
   34         | ID . '[' expression ']'
   35 procedure_statement: ID .
   36                    | ID . '(' expression_list ')'

    '('  shift, and go to state 54
    '['  shift, and go to state 55

    ASSIGNOP  reduce using rule 33 (variable)
    $default  reduce using rule 35 (procedure_statement)


State 27

   29 statement: compound_statement .

    $default  reduce using rule 29 (statement)


State 28

   22 compound_statement: BBEGIN optional_statements . END

    END  shift, and go to state 56


State 29

   23 optional_statements: statement_list .

    $default  reduce using rule 23 (optional_statements)


State 30

   25 statement_list: statement .
   26               | statement . ';' optional_statements

    ';'  shift, and go to state 57

    $default  reduce using rule 25 (statement_list)


State 31

   27 statement: variable . ASSIGNOP expression

    ASSIGNOP  shift, and go to state 58


State 32

   28 statement: procedure_statement .

    $default  reduce using rule 28 (statement)


State 33

   17 subprogram_head: PROCEDURE ID . $@3 arguments ';'

    $default  reduce using rule 16 ($@3)

    $@3  go to state 59


State 34

   15 subprogram_head: FUNCTION ID . $@2 arguments ':' standard_type ';'

    $default  reduce using rule 14 ($@2)

    $@2  go to state 60


State 35

   11 subprogram_declarations: subprogram_declarations subprogram_declaration ';' .

    $default  reduce using rule 11 (subprogram_declarations)


State 36

    5 declarations: declarations . VAR identifier_list ':' type ';'
   13 subprogram_declaration: subprogram_head declarations . subprogram_declarations compound_statement

    VAR  shift, and go to state 14

    $default  reduce using rule 12 (subprogram_declarations)

    subprogram_declarations  go to state 61


State 37

    2 program: $@1 PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.' .

    $default  reduce using rule 2 (program)


State 38

    9 standard_type: INTEGER .

    $default  reduce using rule 9 (standard_type)


State 39

   10 standard_type: REAL .

    $default  reduce using rule 10 (standard_type)


State 40

    8 type: ARRAY . '[' INUM DOTDOT INUM ']' OF standard_type

    '['  shift, and go to state 62


State 41

    5 declarations: declarations VAR identifier_list ':' type . ';'

    ';'  shift, and go to state 63


State 42

    7 type: standard_type .

    $default  reduce using rule 7 (type)


State 43

   42 simple_expression: ADDOP . term

    NOT   shift, and go to state 44
    ID    shift, and go to state 45
    INUM  shift, and go to state 46
    RNUM  shift, and go to state 47
    '('   shift, and go to state 48

    term    go to state 64
    factor  go to state 52


State 44

   52 factor: NOT . factor

    NOT   shift, and go to state 44
    ID    shift, and go to state 45
    INUM  shift, and go to state 46
    RNUM  shift, and go to state 47
    '('   shift, and go to state 48

    factor  go to state 65


State 45

   46 factor: ID .
   47       | ID . '[' expression ']'
   48       | ID . '(' expression_list ')'

    '('  shift, and go to state 66
    '['  shift, and go to state 67

    $default  reduce using rule 46 (factor)


State 46

   49 factor: INUM .

    $default  reduce using rule 49 (factor)


State 47

   50 factor: RNUM .

    $default  reduce using rule 50 (factor)


State 48

   51 factor: '(' . expression ')'

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 68
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 49

   30 statement: IF expression . THEN statement ELSE statement
   31          | IF expression . THEN statement

    THEN  shift, and go to state 69


State 50

   39 expression: simple_expression .
   40           | simple_expression . RELOP simple_expression
   43 simple_expression: simple_expression . ADDOP term

    RELOP  shift, and go to state 70
    ADDOP  shift, and go to state 71

    $default  reduce using rule 39 (expression)


State 51

   41 simple_expression: term .
   45 term: term . MULOP factor

    MULOP  shift, and go to state 72

    $default  reduce using rule 41 (simple_expression)


State 52

   44 term: factor .

    $default  reduce using rule 44 (term)


State 53

   32 statement: WHILE expression . DO statement

    DO  shift, and go to state 73


State 54

   36 procedure_statement: ID '(' . expression_list ')'

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression_list    go to state 74
    expression         go to state 75
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 55

   34 variable: ID '[' . expression ']'

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 76
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 56

   22 compound_statement: BBEGIN optional_statements END .

    $default  reduce using rule 22 (compound_statement)


State 57

   26 statement_list: statement ';' . optional_statements

    BBEGIN  shift, and go to state 17
    IF      shift, and go to state 24
    WHILE   shift, and go to state 25
    ID      shift, and go to state 26

    $default  reduce using rule 24 (optional_statements)

    compound_statement   go to state 27
    optional_statements  go to state 77
    statement_list       go to state 29
    statement            go to state 30
    variable             go to state 31
    procedure_statement  go to state 32


State 58

   27 statement: variable ASSIGNOP . expression

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 78
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 59

   17 subprogram_head: PROCEDURE ID $@3 . arguments ';'

    '('  shift, and go to state 79

    $default  reduce using rule 19 (arguments)

    arguments  go to state 80


State 60

   15 subprogram_head: FUNCTION ID $@2 . arguments ':' standard_type ';'

    '('  shift, and go to state 79

    $default  reduce using rule 19 (arguments)

    arguments  go to state 81


State 61

   11 subprogram_declarations: subprogram_declarations . subprogram_declaration ';'
   13 subprogram_declaration: subprogram_head declarations subprogram_declarations . compound_statement

    BBEGIN     shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19

    subprogram_declaration  go to state 20
    subprogram_head         go to state 21
    compound_statement      go to state 82


State 62

    8 type: ARRAY '[' . INUM DOTDOT INUM ']' OF standard_type

    INUM  shift, and go to state 83


State 63

    5 declarations: declarations VAR identifier_list ':' type ';' .

    $default  reduce using rule 5 (declarations)


State 64

   42 simple_expression: ADDOP term .
   45 term: term . MULOP factor

    MULOP  shift, and go to state 72

    $default  reduce using rule 42 (simple_expression)


State 65

   52 factor: NOT factor .

    $default  reduce using rule 52 (factor)


State 66

   48 factor: ID '(' . expression_list ')'

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression_list    go to state 84
    expression         go to state 75
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 67

   47 factor: ID '[' . expression ']'

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 85
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 68

   51 factor: '(' expression . ')'

    ')'  shift, and go to state 86


State 69

   30 statement: IF expression THEN . statement ELSE statement
   31          | IF expression THEN . statement

    BBEGIN  shift, and go to state 17
    IF      shift, and go to state 24
    WHILE   shift, and go to state 25
    ID      shift, and go to state 26

    compound_statement   go to state 27
    statement            go to state 87
    variable             go to state 31
    procedure_statement  go to state 32


State 70

   40 expression: simple_expression RELOP . simple_expression

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    simple_expression  go to state 88
    term               go to state 51
    factor             go to state 52


State 71

   43 simple_expression: simple_expression ADDOP . term

    NOT   shift, and go to state 44
    ID    shift, and go to state 45
    INUM  shift, and go to state 46
    RNUM  shift, and go to state 47
    '('   shift, and go to state 48

    term    go to state 89
    factor  go to state 52


State 72

   45 term: term MULOP . factor

    NOT   shift, and go to state 44
    ID    shift, and go to state 45
    INUM  shift, and go to state 46
    RNUM  shift, and go to state 47
    '('   shift, and go to state 48

    factor  go to state 90


State 73

   32 statement: WHILE expression DO . statement

    BBEGIN  shift, and go to state 17
    IF      shift, and go to state 24
    WHILE   shift, and go to state 25
    ID      shift, and go to state 26

    compound_statement   go to state 27
    statement            go to state 91
    variable             go to state 31
    procedure_statement  go to state 32


State 74

   36 procedure_statement: ID '(' expression_list . ')'
   38 expression_list: expression_list . ',' expression

    ')'  shift, and go to state 92
    ','  shift, and go to state 93


State 75

   37 expression_list: expression .

    $default  reduce using rule 37 (expression_list)


State 76

   34 variable: ID '[' expression . ']'

    ']'  shift, and go to state 94


State 77

   26 statement_list: statement ';' optional_statements .

    $default  reduce using rule 26 (statement_list)


State 78

   27 statement: variable ASSIGNOP expression .

    $default  reduce using rule 27 (statement)


State 79

   18 arguments: '(' . parameter_list ')'

    ID  shift, and go to state 7

    identifier_list  go to state 95
    parameter_list   go to state 96


State 80

   17 subprogram_head: PROCEDURE ID $@3 arguments . ';'

    ';'  shift, and go to state 97


State 81

   15 subprogram_head: FUNCTION ID $@2 arguments . ':' standard_type ';'

    ':'  shift, and go to state 98


State 82

   13 subprogram_declaration: subprogram_head declarations subprogram_declarations compound_statement .

    $default  reduce using rule 13 (subprogram_declaration)


State 83

    8 type: ARRAY '[' INUM . DOTDOT INUM ']' OF standard_type

    DOTDOT  shift, and go to state 99


State 84

   38 expression_list: expression_list . ',' expression
   48 factor: ID '(' expression_list . ')'

    ')'  shift, and go to state 100
    ','  shift, and go to state 93


State 85

   47 factor: ID '[' expression . ']'

    ']'  shift, and go to state 101


State 86

   51 factor: '(' expression ')' .

    $default  reduce using rule 51 (factor)


State 87

   30 statement: IF expression THEN statement . ELSE statement
   31          | IF expression THEN statement .

    ELSE  shift, and go to state 102

    ELSE      [reduce using rule 31 (statement)]
    $default  reduce using rule 31 (statement)


State 88

   40 expression: simple_expression RELOP simple_expression .
   43 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 71

    $default  reduce using rule 40 (expression)


State 89

   43 simple_expression: simple_expression ADDOP term .
   45 term: term . MULOP factor

    MULOP  shift, and go to state 72

    $default  reduce using rule 43 (simple_expression)


State 90

   45 term: term MULOP factor .

    $default  reduce using rule 45 (term)


State 91

   32 statement: WHILE expression DO statement .

    $default  reduce using rule 32 (statement)


State 92

   36 procedure_statement: ID '(' expression_list ')' .

    $default  reduce using rule 36 (procedure_statement)


State 93

   38 expression_list: expression_list ',' . expression

    ADDOP  shift, and go to state 43
    NOT    shift, and go to state 44
    ID     shift, and go to state 45
    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    '('    shift, and go to state 48

    expression         go to state 103
    simple_expression  go to state 50
    term               go to state 51
    factor             go to state 52


State 94

   34 variable: ID '[' expression ']' .

    $default  reduce using rule 34 (variable)


State 95

    4 identifier_list: identifier_list . ',' ID
   20 parameter_list: identifier_list . ':' type

    ','  shift, and go to state 10
    ':'  shift, and go to state 104


State 96

   18 arguments: '(' parameter_list . ')'
   21 parameter_list: parameter_list . ';' identifier_list ':' type

    ')'  shift, and go to state 105
    ';'  shift, and go to state 106


State 97

   17 subprogram_head: PROCEDURE ID $@3 arguments ';' .

    $default  reduce using rule 17 (subprogram_head)


State 98

   15 subprogram_head: FUNCTION ID $@2 arguments ':' . standard_type ';'

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    standard_type  go to state 107


State 99

    8 type: ARRAY '[' INUM DOTDOT . INUM ']' OF standard_type

    INUM  shift, and go to state 108


State 100

   48 factor: ID '(' expression_list ')' .

    $default  reduce using rule 48 (factor)


State 101

   47 factor: ID '[' expression ']' .

    $default  reduce using rule 47 (factor)


State 102

   30 statement: IF expression THEN statement ELSE . statement

    BBEGIN  shift, and go to state 17
    IF      shift, and go to state 24
    WHILE   shift, and go to state 25
    ID      shift, and go to state 26

    compound_statement   go to state 27
    statement            go to state 109
    variable             go to state 31
    procedure_statement  go to state 32


State 103

   38 expression_list: expression_list ',' expression .

    $default  reduce using rule 38 (expression_list)


State 104

   20 parameter_list: identifier_list ':' . type

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39
    ARRAY    shift, and go to state 40

    type           go to state 110
    standard_type  go to state 42


State 105

   18 arguments: '(' parameter_list ')' .

    $default  reduce using rule 18 (arguments)


State 106

   21 parameter_list: parameter_list ';' . identifier_list ':' type

    ID  shift, and go to state 7

    identifier_list  go to state 111


State 107

   15 subprogram_head: FUNCTION ID $@2 arguments ':' standard_type . ';'

    ';'  shift, and go to state 112


State 108

    8 type: ARRAY '[' INUM DOTDOT INUM . ']' OF standard_type

    ']'  shift, and go to state 113


State 109

   30 statement: IF expression THEN statement ELSE statement .

    $default  reduce using rule 30 (statement)


State 110

   20 parameter_list: identifier_list ':' type .

    $default  reduce using rule 20 (parameter_list)


State 111

    4 identifier_list: identifier_list . ',' ID
   21 parameter_list: parameter_list ';' identifier_list . ':' type

    ','  shift, and go to state 10
    ':'  shift, and go to state 114


State 112

   15 subprogram_head: FUNCTION ID $@2 arguments ':' standard_type ';' .

    $default  reduce using rule 15 (subprogram_head)


State 113

    8 type: ARRAY '[' INUM DOTDOT INUM ']' . OF standard_type

    OF  shift, and go to state 115


State 114

   21 parameter_list: parameter_list ';' identifier_list ':' . type

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39
    ARRAY    shift, and go to state 40

    type           go to state 116
    standard_type  go to state 42


State 115

    8 type: ARRAY '[' INUM DOTDOT INUM ']' OF . standard_type

    INTEGER  shift, and go to state 38
    REAL     shift, and go to state 39

    standard_type  go to state 117


State 116

   21 parameter_list: parameter_list ';' identifier_list ':' type .

    $default  reduce using rule 21 (parameter_list)


State 117

    8 type: ARRAY '[' INUM DOTDOT INUM ']' OF standard_type .

    $default  reduce using rule 8 (type)
